fix: Fixed user answers overlap

--- a/src/public/css/main_en.css
+++ b/src/public/css/main_en.css
@@ -9588,7 +9588,7 @@ table.fancytree-ext-table {
 .questionsList .questionsStatus.answer {
   display: inline-block;
   width: 200px;
-  padding: 5px 0 5px 5px;
+  padding: 5px 10px 5px 5px;
   line-height: 25px;
   font-size: 14px;
   font-size: 0.875rem;
